tests/typecheck/should_fail/T7989.stderr

T7989.hs:6:7: error: [GHC-14392]
    Invalid record update.
    No constructor in scope has all of the following fields: ‘a0’, ‘b0’
